<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GUI.MainActivity">

    <!-- Top bar with name and logo -->
    <RelativeLayout
        android:id="@+id/header_homepage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#f0f0f0"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TV_homepage_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/IV_main_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@android:drawable/ic_menu_gallery" />
    </RelativeLayout>

    <!-- Checkboxes -->

    <!-- Placeholder for the graph -->

    <GridLayout
        android:id="@+id/checkboxes_homepage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="16dp"
        android:rowCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_homepage">

        <CheckBox
            android:id="@+id/CB_homepage_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habitat_1" />

        <CheckBox
            android:id="@+id/CB_homepage_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habitat_2" />

        <CheckBox
            android:id="@+id/CB_homepage_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habitat_3" />

        <CheckBox
            android:id="@+id/CB_homepage_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habitat_4" />

        <CheckBox
            android:id="@+id/CB_homepage_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habitat_5" />

        <CheckBox
            android:id="@+id/CB_homepage_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habitat_6" />

        <CheckBox
            android:id="@+id/CB_homepage_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habitat_7" />

    </GridLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:contentDescription="Graph placeholder"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintBottom_toTopOf="@+id/navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxes_homepage" />

    <!-- Navigation bar -->
    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/BTN_navbar1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/navbar_1" />

        <Button
            android:id="@+id/BTN_navbar2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/navbar_2" />

        <Button
            android:id="@+id/BTN_navbar3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/navbar_3" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
