<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:visibility="visible"
    android:background="@drawable/inlog">

    <TextView
        android:id="@+id/TV_login_title"
        android:layout_width="188dp"
        android:layout_height="186dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/sofia_sans_extra_condensed_bold"
        android:text="@string/app_name"
        android:textSize="80sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BT_login_submit"
        android:layout_width="310dp"
        android:layout_height="53dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/sofia_sans_extra_condensed_bold"
        android:text="@string/login_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ET_login_password"
        android:layout_width="314dp"
        android:layout_height="54dp"
        android:ems="10"
        android:fontFamily="@font/sofia_sans_extra_condensed_bold"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/BT_login_forgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ET_login_email"
        android:layout_width="311dp"
        android:layout_height="54dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:fontFamily="@font/sofia_sans_extra_condensed_bold"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/ET_login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BT_login_forgotPassword"
        android:layout_width="198dp"
        android:layout_height="49dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/backgroundColor"
        android:fontFamily="@font/sofia_sans_extra_condensed_bold"
        android:text="@string/password_forgot_button"
        android:textColor="@color/grey"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/BT_login_submit"
        app:layout_constraintEnd_toEndOf="@+id/ET_login_password" />

    <ProgressBar
        android:id="@+id/PB_History_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>